fix: resolve SonarCloud Blocker and Critical issues
- Remove duplicate toDTO method in AdviceMapper (Blocker)
- Define COMPANY_FILTER constant in CompanyFilterRequestEnabler (Critical)
- Replace UTF-8 string with StandardCharsets.UTF_8 (Minor)
- Combine duplicate empty catch blocks with comments (Major)
- Add comments to empty catch blocks for clarity

Resolves 6 SonarCloud issues